data/derived/comb/progs/unify/prog0087.ml.out
Characters 496-499:
  | Cube a -> "(" ^ (exprToString a) ^ "*" ^ (exprToString a) ^ "*" (exprToString a) ^ ")";;
                                                                ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
